--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@ field. I will do my best to meet the expectations of the company.
                             <div class="col-md-6">
                                 <div class="skills">
                                     <div class="skill-name">
-                                        <p>HTML</p><p>85%</p>
+                                        <p>HTML/CSS</p><p>85%</p>
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                     <div class="skill-name">
-                                        <p>CSS</p><p>80%</p>
+                                        <p>JAVA</p><p>70%</p>
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
